--- a/KNN/SocialNetworkAds.ipynb
+++ b/KNN/SocialNetworkAds.ipynb
@@ -3,24 +3,36 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2e1057fc",
+   "id": "bea3d707",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn import metrics"
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "from sklearn.datasets import make_classification"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ce1a35b4",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "03bb08a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset =pd.read_csv('SocialNetworkAds.csv')\n",
+    "x=dataset.iloc[:,[1,2,3]].values\n",
+    "y=dataset.iloc[:,-1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6406d7e7",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -104,92 +116,143 @@
        "4  15804002    Male   19            76000          0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read Dataset\n",
-    "ads = pd.read_csv('SocialNetworkAds.csv')\n",
-    "#Display Head of the dataset\n",
-    "ads.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "8a8f3b32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define X & Y Variables\n",
-    "X = ads.iloc[:,[2,3]].values\n",
-    "Y = ads.iloc[:,4].values"
+    "dataset.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ec21461b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Split Data s.t. test_size of 1/3 and train size of 2/3 from OG Dataset\n",
-    "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,test_size=1/3)\n",
-    "# Fit & Transaform the X\n",
-    "sc = StandardScaler()\n",
-    "X_train = sc.fit_transform(X_train)\n",
-    "X_test = sc.fit_transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "87341ca3",
+   "id": "ac880b94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KNeighborsClassifier()"
+       "(400, 5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Init KN Classifier\n",
-    "knclassifier = KNeighborsClassifier(n_neighbors =5)\n",
-    "knclassifier.fit(X_train,Y_train)"
+    "dataset.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "78ec503d",
+   "execution_count": 11,
+   "id": "a7717e02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le = LabelEncoder()\n",
+    "x[:,0]=le.fit_transform(x[:,0])\n",
+    "X_train,X_test,y_train,y_test =train_test_split(x,y,test_size=0.30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ae061ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.fit_transform(X_test)\n",
+    "classifier = KNeighborsClassifier()\n",
+    "classifier.fit(X_train, y_train)\n",
+    "y_pred= classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1fa0bf36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1,\n",
+       "       0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,\n",
+       "       1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1,\n",
+       "       0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1,\n",
+       "       1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0,\n",
+       "       0, 0, 1, 1, 1, 0, 1, 0, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "03927e26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1,\n",
+       "       0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,\n",
+       "       1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1,\n",
+       "       0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1,\n",
+       "       1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 1, 1, 1, 1, 0, 1, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ba2c989c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 0.8432835820895522\n"
+      "CM: \n",
+      " [[72  7]\n",
+      " [ 4 37]]\n",
+      "AC:  0.9083333333333333\n"
      ]
     }
    ],
    "source": [
-    "# Predict & Check Accuracy\n",
-    "Y_Predict = knclassifier.predict(X_test)\n",
-    "print(\"Accuracy\",metrics.accuracy_score(Y_test,Y_Predict))"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "ac = accuracy_score(y_test, y_pred)\n",
+    "print(\"CM: \\n\",cm)\n",
+    "print(\"AC: \",ac)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
